change footer text size to avoid generating scrollbar

--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -16,13 +16,12 @@ h1 {
 
 h3 {
   font-family: 'Josefin Sans', sans-serif;
-  line-height: normal;
   font-size: 24px;
 }
 
 h4 {
   font-family: 'Lato', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.4;
 }
 
@@ -36,7 +35,7 @@ a:hover {
 /* Landscape phone smaller */
 @media (min-width: 568px) and (max-width: 681px) {
   h4 {
-    font-size: 14px;
+    font-size: 13px;
   }
 }
 
@@ -51,6 +50,6 @@ a:hover {
   }
 
   h4 {
-    font-size: 13px;
+    font-size: 12px;
   }
 }
